# munin-c

./: .gitattributes  .gitignore  .travis.yml  COMPILING  Makefile.am  README.md  README.rst  common.am  configure.ac  getversion
.github/workflows/: c-cpp.yml  codeql-analysis.yml
m4/: attributes.m4
munin-node-c/: Makefile  main.c
munin-plugins-c/: .gitignore  Makefile  README  cpu.c  main.c
node/: main.c
plugins-c/: common.c  common.h  cpu.c  entropy.c  forks.c  fw_packets.c  if_err_.c  interrupts.c  load.c  main.c  memory.c  open_files.c  open_inodes.c  processes.c  swap.c  threads.c  uptime.c
src/common/: xctype.h
src/node/: .gitignore  Makefile.am  README  inetd.c  main.c  munin-node-c.pod  node.c
src/plugins/: .gitignore  Makefile.am  README  common.c  common.h  cpu-sysctl.c  cpu.c  df.c  entropy.c  external_.c  forks.c  fw_packets.c  if_err_.c  interrupts.c  iostat.c  load-sysctl.c  load.c  main.c  memory.c  munin-plugins-c.pod  open_files.c  open_inodes.c  plugins.h  processes.c  smart.c  swap.c  threads.c  uptime.c
src/plugins/p/: cpu-bsd.c  cpu-darwin.c  df-bsd.c  df-sunos.c  df.c  entropy-unsupported.c  entropy.c  external_.c  forks-bsd.c  forks-darwin.c  forks.c  fw_packets-darwin.c  fw_packets-proc.c  fw_packets-unsupported.c  if_.c  if_err_-darwin.c  if_err_-unsupported.c  interrupts-unsupported.c  interrupts.c  iostat-darwin.c  iostat-unsupported.c  load-bsd.c  load.c  memory-bsd.c  memory-darwin.c  memory-proc.c  memory.c  open_files-bsd.c  open_files-darwin.c  open_files-proc.c  open_files.c  open_inodes-unsupported.c  processes-bsd.c  processes-darwin.c  processes-proc.c  swap-bsd.c  swap-darwin.c  swap.c  threads-bsd.c  threads-darwin.c  (+2 more)
systemd/: munin-node-c.socket  munin-node-c@.service  munin-node-daemon.service
t/: .gitignore  Makefile  Makefile.am  common.c  common.h  env  nb_env.c  node_list  ok_plugin.c  plugin_list
t.conf/: env.conf
t/p/: nb_env.c  ok_plugin.c
