# Copyright (C) 2014 Steve Schnepp <steve.schnepp@pwkf.org> - All rights reserved.
#
# This copyrighted material is made available to anyone wishing to use,
# modify, copy, or redistribute it subject to the terms and conditions
# of the GNU General Public License v.2 or v.3.
#

include $(top_srcdir)/common.am

sbin_PROGRAMS = ok_plugin nb_env
ok_plugin_SOURCES = ok_plugin.c common.c
nb_env_SOURCES = nb_env.c common.c
