# Copyright (C) 2014 Steve Schnepp <steve.schnepp@pwkf.org> - All rights reserved.
#
# This copyrighted material is made available to anyone wishing to use,
# modify, copy, or redistribute it subject to the terms and conditions
# of the GNU General Public License v.2 or v.3.
#

include $(top_srcdir)/common.am

check_PROGRAMS = p/ok_plugin p/nb_env
p_ok_plugin_SOURCES = p/ok_plugin.c common.c common.h
p_nb_env_SOURCES = p/nb_env.c common.c common.h
